# service-cert

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml  cd.yml  lint.yml  tests.yml
common/: const.py  enums.py  hasher.py  jwt.py  utils.py
common/clients/: __init__.py  confluence.py
common/confluence/: __init__.py  folder.py  page.py  space.py
common/db/: __init__.py  base.py
common/db/migrations/: env.py
common/db/models/: __init__.py  confluence.py  fake_model.py  release.py  requirements.py  service.py  team.py  template.py  user.py
common/schemas/: __init__.py  batch.py  folder.py  page.py  release.py  release_page.py  requirement.py  service.py  service_space.py  space.py  team.py  template.py  user.py
common/services/template/: selectors.py
infrastructure/: context.py
infrastructure/config/: __init__.py  _db.py
infrastructure/logging/: __init__.py  json_formatter.py
jobs/: main.py
jobs/background_tasks/: __init__.py  generate_pages.py  generate_release_folder.py  generate_release_page.py  generate_space.py
jobs/utils/: decorators.py
services/: exceptions.py
services/release_page/: interactor.py
services/release_requirements/: interactors.py  selectors.py
services/releases/: interactor.py  selectors.py
services/service/: interactor.py  selectors.py
services/service_requirements/: interactors.py  selectors.py
services/service_space/: interactor.py  selectors.py
services/team/: interactors.py
services/template/: selectors.py
services/user/: __init__.py  interactor.py  selectors.py
tests/: conftest.py  test_any.py
tests/common/db/: test_fake_model.py
tests/fixtures/: client.py  db.py  event_loop.py  factory_mixin.py  release_page.py  release_requirement.py  releases.py  service_requirements.py  service_space.py  services.py  templates.py  user.py
tests/jobs/background_tasks/: test_create_release_folder.py  test_generate_release_page.py  test_generate_space.py  test_init_generate_space.py
tests/web/jrpc_methods/: test_add_release_requirement.py  test_add_service_requirement.py  test_create_release_arbitrarily.py  (+24 more)
web/: exceptions.py  middleware.py
web/dependencies/: user.py
web/jrpc_methods/: __init__.py  _rpc_server.py  add_release_requirement.py  add_service_requirement.py  create_project.py  create_release_arbitrarily.py  create_release_by_another.py  create_service_arbitrarily.py  create_service_by_another.py  delete_release_requirement.py  delete_service_requirement.py  delete_user.py  edit_release.py  edit_release_requirement.py  edit_service.py  edit_service_requirement.py  edit_service_team.py  get_all_release_requirements.py  get_all_service_requirements.py  get_all_users.py  get_current_user.py  get_release.py  get_service.py  get_service_releases.py  get_services.py  get_template_list.py  get_user_by_id.py  login.py  refresh_session.py  register.py  register_user.py  search_releases.py  search_service_by_name.py  update_user.py
(+14 files in other folders)
